--- a/brazilian_ecommerce_dbt_snowflake/dbt_project.yml
+++ b/brazilian_ecommerce_dbt_snowflake/dbt_project.yml
@@ -2,11 +2,11 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'brazilian_ecommerce_dbt_snowflake'
+name: 'brazilian_ecommerce'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'brazilian_ecommerce_dbt_snowflake'
+profile: 'brazilian_ecommerce'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -30,7 +30,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  brazilian_ecommerce_dbt_snowflake:
+  brazilian_ecommerce:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      +materialized: table
+      snowflake_warehouse: BrazilianEC
+    marts:
+      +materialized: table
+      snowflake_warehouse: BrazilianEC
