creating source and sql files

--- a/brazilian_ecommerce_dbt_snowflake/dbt_project.yml
+++ b/brazilian_ecommerce_dbt_snowflake/dbt_project.yml
@@ -57,4 +57,10 @@ models:
     
     marts:
       +materialized: table
-      snowflake_warehouse: BrazilianEC
+      +schema: marts
+      +materialized: table
+      +tags: ["marts"]
+      core:
+        +schema: core
+        +materialized: table
+        +tags: ["core"]
