update on dbt workflow

--- a/.github/workflows/dbt_workflow.yml
+++ b/.github/workflows/dbt_workflow.yml
@@ -3,6 +3,8 @@ name: dbt CI/CD Pipeline
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
   schedule:
     - cron: '0 0 1 * *'  # Runs at midnight on the first of each month
   workflow_dispatch:  # Allows manual trigger
